force-app/main/default/objects/subscribe__c/subscribe__c.object-meta.xml
<CustomObject>
    <label>subscribe</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>subscribe</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>