force-app/main/default/objects/subscribe__c/fields/Age_Bracket__c.field-meta.xml
<CustomField>
    <fullName>Age_Bracket__c</fullName>
    <label>Age Bracket</label>
    <length>250</length>
    <type>Text</type>
</CustomField>