force-app/main/default/objects/subscribe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>email__c</columns>
    <columns>Site__c</columns>
    <columns>wheretoknow__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>